# aemeath_ai_desktop_pet

./: # Bug List - Aemeath 桌面宠物.md  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NEW_FEATURES.md  README.md  REFACTOR.md  TODO.md  aemeath.spec  build.bat  build.py  fix_config.py  fix_glm_config.py  main.py  pyproject.toml  requirements.txt
assets/models/kws/: keywords.txt
src/: __init__.py  config.py  constants.py  convert_icon.py  main.py
src/ai/: __init__.py  chat_engine.py  config_dialog.py  llm_engine.py  simple_config_dialog.py
src/animation/: animation_manager.py
src/behavior/: motion_controller.py
src/core/: pet_core.py  window_manager.py
src/interaction/: click_handler.py  drag_handler.py
src/media/: music_controller.py
src/net/: version_checker.py
src/src_platform/: __init__.py  hotkey.py  tray.py
src/translate/: __init__.py
src/ui/: ai_chat_panel.py  music_panel.py  pomodoro_indicator.py  quick_menu.py  speech_bubble.py  ui_manager.py
src/voice/: __init__.py  command_analyzer.py  keyword_spotter.py  system_commands.py  token_manager.py  voice_assistant.py  voice_recognition.py
